name:                hapistrano
version:             0.2.0.2
synopsis:            A deployment library for Haskell applications
description:
  .
  Hapistrano makes it easy to reliably deploy Haskell applications
  to a server.
  .
  Following popular libraries like Ruby's <http://capistranorb.com/
  Capistrano>, Hapistrano does the work of building the application
  with dependencies into a distinct folder, and then atomically moves
  a symlink to the latest complete build.
  .
  This allows for atomic switchovers to new application code after the
  build is complete. Rollback is even simpler, since Hapistrano can
  just point the `current` symlink to the previous release.
  .
  See <https://github.com/stackbuilders/hapistrano the project readme on GitHub>
  for more information.
  .
license:             MIT
license-file:        LICENSE
author:              Justin Leitgeb
maintainer:          justin@stackbuilders.com
copyright:           2015 Stack Builders Inc.
category:            System
Homepage:            https://github.com/stackbuilders/hapistrano
Bug-reports:         https://github.com/stackbuilders/hapistrano/issues
build-type:          Simple
cabal-version:       >=1.10

executable hap
  main-is:        Main.hs
  hs-source-dirs: src
  build-depends:         base >=4.5 && <4.9
                       , time-locale-compat
                       , time
                       , old-locale
                       , process
                       , either
                       , transformers
                       , mtl
                       , filepath
                       , base-compat

  default-language:    Haskell2010
  ghc-options:         -Wall

library
  exposed-modules:     System.Hapistrano
  other-modules:       System.Hapistrano.Types

  build-depends:         base >=4.5 && <4.9
                       , time-locale-compat
                       , time
                       , old-locale
                       , process
                       , either
                       , transformers
                       , mtl
                       , filepath
                       , base-compat

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite hapistrano-test
  type: exitcode-stdio-1.0
  hs-source-dirs: spec, src
  main-is: Spec.hs

  build-depends:       base >=4.5 && <4.9
                       , time-locale-compat
                       , time
                       , old-locale
                       , process
                       , either
                       , transformers
                       , mtl
                       , filepath
                       , base-compat
                       , hspec
                       , temporary
                       , directory

  default-language:    Haskell2010
  ghc-options:         -Wall

source-repository head
  type:     git
  location: https://github.com/stackbuilders/hapistrano
