name:                hapistrano
version:             0.2.1
synopsis:            A deployment library for Haskell applications
description:
  .
  Hapistrano makes it easy to reliably deploy Haskell applications
  to a server.
  .
  Following popular libraries like Ruby's <http://capistranorb.com/
  Capistrano>, Hapistrano does the work of building the application
  with dependencies into a distinct folder, and then atomically moves
  a symlink to the latest complete build.
  .
  This allows for atomic switchovers to new application code after the
  build is complete. Rollback is even simpler, since Hapistrano can
  just point the `current` symlink to the previous release.
  .
  See <https://github.com/stackbuilders/hapistrano the project readme on GitHub>
  for more information.
  .
license:             MIT
license-file:        LICENSE
author:              Justin Leitgeb
maintainer:          justin@stackbuilders.com
copyright:           2015 Stack Builders Inc.
category:            System
homepage:            https://github.com/stackbuilders/hapistrano
bug-reports:         https://github.com/stackbuilders/hapistrano/issues
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     System.Hapistrano
  other-modules:       System.Hapistrano.Types
  build-depends:       base >=4.5 && <4.9
                     , either
                     , filepath
                     , mtl
                     , process
                     , time-locale-compat
                     , time
                     , transformers
  ghc-options:         -Wall
  default-language:    Haskell2010

executable hap
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , hapistrano
                     , base-compat
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite hapistrano-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      spec
  main-is:             Spec.hs
  other-modules:       System.HapistranoSpec
  build-depends:       base
                     , hapistrano
                     , directory
                     , either
                     , filepath
                     , hspec
                     , mtl
                     , process
                     , temporary
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/stackbuilders/hapistrano
