cabal-version:  1.12
name:           example
version:        0.1.0.0
description:
  This is an example project that has been created in order to test
  the deployment process using the working_dir feature of hapistrano.
author:         Justin Leitgeb
maintainer:     jpaucar@stackbuilders.com
copyright:      2015-Present Stack Builders Inc.
license:        MIT
license-file:   ../LICENSE
build-type:     Simple
extra-source-files:
  README.md

source-repository head
  type: git
  location: https://github.com/stackbuilders/hapistrano/

library
  exposed-modules:
      Lib
  other-modules:
      Paths_example
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010

executable example-exe
  main-is: Main.hs
  other-modules:
      Paths_example
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , example
  default-language: Haskell2010
